[gd_scene load_steps=11 format=3 uid="uid://cfukeyikkk6x2"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_hexgj"]
[ext_resource type="Texture2D" uid="uid://b3w4ribxcfw8l" path="res://assets/images/bg_main.png" id="2_o6p07"]
[ext_resource type="Texture2D" uid="uid://baq0oren48hdj" path="res://assets/images/logo.png" id="3_bs5df"]
[ext_resource type="Texture2D" uid="uid://ch6su280lingy" path="res://assets/images/selectors/hearts_selector.png" id="4_n0dnr"]
[ext_resource type="FontFile" uid="uid://dfdqruofissm7" path="res://assets/fonts/coolvetica/coolvetica rg.otf" id="4_oisd6"]
[ext_resource type="Theme" uid="uid://d1c0123o2o6dc" path="res://resources/main_theme.tres" id="4_yn046"]
[ext_resource type="Texture2D" uid="uid://dryutpvfltuee" path="res://assets/images/selectors/spades_selector.png" id="7_s0ojw"]
[ext_resource type="Texture2D" uid="uid://cvgpypw1a67o0" path="res://assets/images/selectors/clubs_selector.png" id="8_7oxnc"]
[ext_resource type="Texture2D" uid="uid://dk6m6rm4sstu6" path="res://assets/images/selectors/diamonds_selector.png" id="9_5fb1u"]

[sub_resource type="LabelSettings" id="LabelSettings_uawbq"]
font = ExtResource("4_oisd6")
font_size = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_yn046")
script = ExtResource("1_hexgj")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_o6p07")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="BG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Logo" type="TextureRect" parent="BG/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 170)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_bs5df")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="BG/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Row 1" type="HBoxContainer" parent="BG/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="MatchButton" type="Button" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
keep_pressed_outside = true
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1/MatchButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HeartsLabel" type="Label" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1/MatchButton/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "MATCH"
label_settings = SubResource("LabelSettings_uawbq")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HeartsSelector" type="TextureRect" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1/MatchButton/PanelContainer/HeartsLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -19.5
offset_right = -8.0
offset_bottom = 20.5
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("4_n0dnr")
expand_mode = 3
stretch_mode = 4

[node name="TutorialButton" type="Button" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
keep_pressed_outside = true
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1/TutorialButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SpadesLabel" type="Label" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1/TutorialButton/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "TUTORIAL"
label_settings = SubResource("LabelSettings_uawbq")
vertical_alignment = 1

[node name="SpadesSelector" type="TextureRect" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1/TutorialButton/PanelContainer/SpadesLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.00002
offset_top = -20.0
offset_right = 56.8766
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("7_s0ojw")
expand_mode = 3
stretch_mode = 4

[node name="Row 2" type="HBoxContainer" parent="BG/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="OptionsButton" type="Button" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
keep_pressed_outside = true
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2/OptionsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ClubsLabel" type="Label" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2/OptionsButton/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "OPTIONS"
label_settings = SubResource("LabelSettings_uawbq")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ClubsSelector" type="TextureRect" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2/OptionsButton/PanelContainer/ClubsLabel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -19.5
offset_right = -7.0
offset_bottom = 20.5
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("8_7oxnc")
expand_mode = 3
stretch_mode = 4

[node name="ExitButton" type="Button" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
keep_pressed_outside = true
alignment = 0

[node name="PanelContainer" type="PanelContainer" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DiamondsLabel" type="Label" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2/ExitButton/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "EXIT"
label_settings = SubResource("LabelSettings_uawbq")
vertical_alignment = 1

[node name="DiamondsSelector" type="TextureRect" parent="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2/ExitButton/PanelContainer/DiamondsLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.11179
offset_top = -20.0
offset_right = 57.8765
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("9_5fb1u")
expand_mode = 3
stretch_mode = 4

[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 1/MatchButton" to="." method="_on_match_button_pressed"]
[connection signal="pressed" from="BG/MarginContainer/VBoxContainer/VBoxContainer/Row 2/ExitButton" to="." method="_on_exit_button_pressed"]
